# todo_app_full_stack_backend_code

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/api/: auth.py  deps.py  health.py  responses.py  tasks.py
src/core/: config.py  database.py  middleware.py  security.py
src/models/: task.py  user.py
src/services/: task_service.py
